UPDATE MRJAR Sample