@@ -2,14 +2,16 @@ package com.name;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.List;
+import java.util.logging.Logger;
 
 public class NameFactory implements Factory {
+
+  private static final Logger log = Logger.getLogger(NameFactory.class.getName());
   private final String datasource;
 
   public NameFactory(String datasource) {
@@ -17,9 +19,10 @@ public class NameFactory implements Factory {
   }
 
   public List<Name> getNames() throws IOException, URISyntaxException {
-    System.out.println("getNames from Java 10");
+    log.info("getNames from Java 12".indent(4));
     var input = new String(
-        Files.readAllBytes(Paths.get(ClassLoader.getSystemResource(datasource).toURI())),
+        getClass().getResourceAsStream(
+            String.format("%c%s", File.separatorChar, datasource)).readAllBytes(),
         StandardCharsets.UTF_8);
     var mapper = new ObjectMapper();
     return mapper.readValue(input, new TypeReference<>() {
